# summer-framework

summer-consensus-algo/: Cargo.toml  main.rs
summer-consensus-algo/proto/: rpcservice.proto
summer-consensus-algo/src/: lib.rs
summer-consensus-algo/src/error/: mod.rs  state_error.rs
summer-consensus-algo/src/raft/: mod.rs  network.rs  node_type.rs
summer-consensus-algo/src/rpc/: client.rs  init.rs  mod.rs  server.rs
