[package]
name = "summer-consensus-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "main.rs"

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.19.2",features = ["macros", "rt-multi-thread","time"]}
prost = "0.10.4"

[build-dependencies]
tonic-build = "0.7.2"